--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-icons": "^5.5.0",
     "xlsx": "^0.18.5"
   },
   "prisma": {
